--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.2",
     "axios": "^1.11.0",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
